# Component-v2

./: .gitignore  LICENSE  README.md  pyproject.toml
src/discord_components/: __init__.py  component.py
